// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch with help text should match snapshot 1`] = `
<TestForm
  input={
    Object {
      "change": [Function],
      "value": undefined,
    }
  }
  meta={Object {}}
  onSubmit={[Function]}
>
  <Form
    hideRequiredMark={false}
    layout="horizontal"
    onSubmit={[Function]}
    prefixCls="ant-form"
  >
    <form
      className="ant-form ant-form-horizontal"
      onSubmit={[Function]}
    >
      <CustomSwitch
        formItemLayout={
          Object {
            "labelCol": Object {
              "span": 10,
            },
            "wrapperCol": Object {
              "span": 20,
            },
          }
        }
        helpMessage="help"
        input={
          Object {
            "change": [Function],
            "value": undefined,
          }
        }
        label="TestSwitch"
        meta={Object {}}
        onChange={[Function]}
        style={
          Object {
            "backgroundColor": "#000",
          }
        }
      >
        <div
          className="customfield"
        >
          <FormItem
            colon={true}
            hasFeedback={false}
            label="TestSwitch"
            labelCol={
              Object {
                "span": 10,
              }
            }
            prefixCls="ant-form"
            wrapperCol={
              Object {
                "span": 20,
              }
            }
          >
            <Row
              className="ant-form-item"
              gutter={0}
            >
              <div
                className="ant-row ant-form-item"
              >
                <Col
                  className="ant-form-item-label"
                  key=".$label"
                  span={10}
                >
                  <div
                    className="ant-col-10 ant-form-item-label"
                  >
                    <label
                      className=""
                      htmlFor={null}
                      onClick={[Function]}
                      title="TestSwitch"
                    >
                      TestSwitch
                    </label>
                  </div>
                </Col>
                <Col
                  className="ant-form-item-control-wrapper"
                  key=".$wrapper"
                  span={20}
                >
                  <div
                    className="ant-col-20 ant-form-item-control-wrapper"
                  >
                    <div
                      className="ant-form-item-control"
                    >
                      <span
                        className="ant-form-item-children"
                      >
                        <Switch
                          checked={false}
                          onChange={[Function]}
                          prefixCls="ant-switch"
                          style={
                            Object {
                              "backgroundColor": "#000",
                            }
                          }
                        >
                          <Switch
                            checked={false}
                            checkedChildren={null}
                            className=""
                            defaultChecked={false}
                            onChange={[Function]}
                            onClick={[Function]}
                            prefixCls="ant-switch"
                            style={
                              Object {
                                "backgroundColor": "#000",
                              }
                            }
                            unCheckedChildren={null}
                          >
                            <span
                              checked={false}
                              className="ant-switch"
                              defaultChecked={false}
                              onChange={[Function]}
                              onClick={[Function]}
                              onKeyDown={[Function]}
                              onMouseUp={[Function]}
                              style={
                                Object {
                                  "backgroundColor": "#000",
                                }
                              }
                              tabIndex={0}
                            >
                              <span
                                className="ant-switch-inner"
                              />
                            </span>
                          </Switch>
                        </Switch>
                      </span>
                      <Animate
                        animation={Object {}}
                        component=""
                        componentProps={Object {}}
                        key="help"
                        onAppear={[Function]}
                        onEnd={[Function]}
                        onEnter={[Function]}
                        onLeave={[Function]}
                        transitionAppear={true}
                        transitionEnter={true}
                        transitionLeave={true}
                        transitionName="show-help"
                      />
                    </div>
                  </div>
                </Col>
              </div>
            </Row>
          </FormItem>
          <FontAwesomeIcon$1
            border={false}
            className="customfield__switch-help"
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  448,
                  512,
                  Array [],
                  "f2fd",
                  "M400 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V80c0-26.51-21.49-48-48-48zM224 430c-25.365 0-46-20.636-46-46 0-25.365 20.635-46 46-46s46 20.635 46 46c0 25.364-20.635 46-46 46zm40-131.333V300c0 6.627-5.373 12-12 12h-56c-6.627 0-12-5.373-12-12v-4c0-41.059 31.128-57.472 54.652-70.66 20.171-11.309 32.534-19 32.534-33.976 0-19.81-25.269-32.958-45.698-32.958-27.19 0-39.438 13.139-57.303 35.797-4.045 5.13-11.46 6.069-16.665 2.122l-34.699-26.31c-5.068-3.843-6.251-10.972-2.715-16.258C141.4 112.957 176.158 90 230.655 90c56.366 0 116.531 43.998 116.531 102 0 77.02-83.186 78.205-83.186 106.667z",
                ],
                "iconName": "question-square",
                "prefix": "fas",
              }
            }
            listItem={false}
            mask={null}
            name=""
            onClick={[Function]}
            pull={null}
            pulse={false}
            rotation={null}
            size="2x"
            spin={false}
            symbol={false}
            transform={null}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-question-square fa-w-14 fa-2x customfield__switch-help"
              data-icon="question-square"
              data-prefix="fas"
              onClick={[Function]}
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M400 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V80c0-26.51-21.49-48-48-48zM224 430c-25.365 0-46-20.636-46-46 0-25.365 20.635-46 46-46s46 20.635 46 46c0 25.364-20.635 46-46 46zm40-131.333V300c0 6.627-5.373 12-12 12h-56c-6.627 0-12-5.373-12-12v-4c0-41.059 31.128-57.472 54.652-70.66 20.171-11.309 32.534-19 32.534-33.976 0-19.81-25.269-32.958-45.698-32.958-27.19 0-39.438 13.139-57.303 35.797-4.045 5.13-11.46 6.069-16.665 2.122l-34.699-26.31c-5.068-3.843-6.251-10.972-2.715-16.258C141.4 112.957 176.158 90 230.655 90c56.366 0 116.531 43.998 116.531 102 0 77.02-83.186 78.205-83.186 106.667z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </FontAwesomeIcon$1>
        </div>
      </CustomSwitch>
      <button
        type="submit"
      />
    </form>
  </Form>
</TestForm>
`;

exports[`Switch without help text should match snapshot 1`] = `
<TestForm
  input={
    Object {
      "change": [Function],
      "value": undefined,
    }
  }
  meta={Object {}}
  onSubmit={[Function]}
>
  <Form
    hideRequiredMark={false}
    layout="horizontal"
    onSubmit={[Function]}
    prefixCls="ant-form"
  >
    <form
      className="ant-form ant-form-horizontal"
      onSubmit={[Function]}
    >
      <CustomSwitch
        formItemLayout={
          Object {
            "labelCol": Object {
              "span": 10,
            },
            "wrapperCol": Object {
              "span": 20,
            },
          }
        }
        helpMessage={null}
        input={
          Object {
            "change": [Function],
            "value": undefined,
          }
        }
        label="TestSwitch"
        meta={Object {}}
        onChange={[Function]}
        style={Object {}}
      >
        <div
          className="customfield"
        >
          <FormItem
            colon={true}
            hasFeedback={false}
            label="TestSwitch"
            labelCol={
              Object {
                "span": 10,
              }
            }
            prefixCls="ant-form"
            wrapperCol={
              Object {
                "span": 20,
              }
            }
          >
            <Row
              className="ant-form-item"
              gutter={0}
            >
              <div
                className="ant-row ant-form-item"
              >
                <Col
                  className="ant-form-item-label"
                  key=".$label"
                  span={10}
                >
                  <div
                    className="ant-col-10 ant-form-item-label"
                  >
                    <label
                      className=""
                      htmlFor={null}
                      onClick={[Function]}
                      title="TestSwitch"
                    >
                      TestSwitch
                    </label>
                  </div>
                </Col>
                <Col
                  className="ant-form-item-control-wrapper"
                  key=".$wrapper"
                  span={20}
                >
                  <div
                    className="ant-col-20 ant-form-item-control-wrapper"
                  >
                    <div
                      className="ant-form-item-control"
                    >
                      <span
                        className="ant-form-item-children"
                      >
                        <Switch
                          checked={false}
                          onChange={[Function]}
                          prefixCls="ant-switch"
                          style={Object {}}
                        >
                          <Switch
                            checked={false}
                            checkedChildren={null}
                            className=""
                            defaultChecked={false}
                            onChange={[Function]}
                            onClick={[Function]}
                            prefixCls="ant-switch"
                            style={Object {}}
                            unCheckedChildren={null}
                          >
                            <span
                              checked={false}
                              className="ant-switch"
                              defaultChecked={false}
                              onChange={[Function]}
                              onClick={[Function]}
                              onKeyDown={[Function]}
                              onMouseUp={[Function]}
                              style={Object {}}
                              tabIndex={0}
                            >
                              <span
                                className="ant-switch-inner"
                              />
                            </span>
                          </Switch>
                        </Switch>
                      </span>
                      <Animate
                        animation={Object {}}
                        component=""
                        componentProps={Object {}}
                        key="help"
                        onAppear={[Function]}
                        onEnd={[Function]}
                        onEnter={[Function]}
                        onLeave={[Function]}
                        transitionAppear={true}
                        transitionEnter={true}
                        transitionLeave={true}
                        transitionName="show-help"
                      />
                    </div>
                  </div>
                </Col>
              </div>
            </Row>
          </FormItem>
        </div>
      </CustomSwitch>
      <button
        type="submit"
      />
    </form>
  </Form>
</TestForm>
`;
